Fix dialog on mobile

--- a/assets/css/_component_dialog.scss
+++ b/assets/css/_component_dialog.scss
@@ -17,6 +17,9 @@
   top: 30%;
   left: 50%;
   transform: translate(-50%,-50%);
+  @media(max-width: $breakpoint-1) {
+    top: 50%;
+  }
   #dialog-title {
     margin-bottom: 0.5rem;
   }
@@ -57,6 +60,10 @@
         font-size: 13px;
         font-weight: bold;
         margin: 0;
+        @media(max-width: $breakpoint-1) {
+          font-size: 10px;
+          padding: 0 3px;
+        }
       }
       .circular-progress { 
         position: relative;
@@ -66,8 +73,17 @@
         border-radius: 50%;
         font-weight: bold;
         font-size: 0.8rem;
+        @media(max-width: $breakpoint-1) {
+          width: 50px;
+          height: 50px;
+          font-size: 0.8rem;
+        }
         svg {
           transform: rotate(270deg);
+          @media(max-width: $breakpoint-1) {
+            width: 50px;
+            height: 50px;
+          }
         }
         circle {
           stroke-width: 10;
